--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -3,7 +3,7 @@
         <div class="card docs">
 
             <h1>Current Version</h1>
-            <p>Angular 5 and PrimeNG 5</p>
+            <p>Angular 5.2 and PrimeNG 5.2</p>
 
             <h1>Getting Started</h1>
             <p>Barcelona is a true native application template for Angular and is distributed as a CLI project. If you don't have CLI installed already run the following commands to set it up. In case
@@ -15,7 +15,7 @@ npm install -g @angular/cli
             <p>Once CLI is ready in your system, extract the contents of the Barcelona zip file distribution, cd to the directory,
             install the libraries from npm and then execute "ng serve" to run the application in your local environment at http://localhost:4200/.</p>
 <pre>
-cd Barcelona
+cd barcelona
 npm install
 ng serve
 </pre>
@@ -206,37 +206,17 @@ export class AppMenuComponent implements OnInit &#123;
                 and replace the contents of app.component.ts, app.component.html with their counterparts in Barcelona under <i>src/app</i> folder. In addition,
             copy all the components included by app.component.html such as topbar, footer, sidebar and menu.</p>
 
-            <p>Dependencies of Barcelona are listed below and needs to be added to package.json</p>
+          <p>Install PrimeNG</p>
 <pre>
-"primeng": "^2.0.3",             //required: PrimeNG components
-"jquery": "^3.1.1",              //optional: schedule and nanoscroller
-"chart.js": "^2.4.0",            //optional: chart
-"fullcalendar": "^3.1.0",        //optional: schedule
-"moment": "^2.17.1",             //optional: chart and schedule
-"quill": "^1.1.8",               //optional: editor
+npm install primeng@latest --save
 </pre>
 
-            <p>Add PrimeNG CSS at styles section in angular-cli.json</p>
+          <p>Add PrimeNG CSS at styles section in angular-cli.json.</p>
 
 <pre>
 "styles": [
     "../node_modules/primeng/resources/primeng.min.css",        //required: PrimeNG components
-    "../node_modules/fullcalendar/dist/fullcalendar.min.css",   //optional: schedule
-    "../node_modules/quill/dist/quill.snow.css",                //optional: editor
-    "../node_modules/nanoscroller/bin/css/nanoscroller.css",    //optional: nanoscroller
     "styles.scss"                                               //your styles and overrides
-],
-</pre>
-
-            <p>Add the following scripts to your angular-cli.json</p>
-<pre>
-"scripts": [
-    "../node_modules/jquery/dist/jquery.js",                                //optional: schedule and nanoscroller
-    "../node_modules/nanoscroller/bin/javascripts/jquery.nanoscroller.js",  //optional: nanoscroller
-    "../node_modules/moment/moment.js",                                     //optional: schedule and charts
-    "../node_modules/chart.js/dist/Chart.js",                               //optional: charts
-    "../node_modules/fullcalendar/dist/fullcalendar.js",                    //optional: schedule
-    "../node_modules/quill/dist/quill.js"                                   //optional: editor
 ],
 </pre>
 
@@ -451,40 +431,50 @@ label: 'Components', icon: 'list', badge: '2', badgeStyleClass: 'red-badge'
             <p>For seamless updates and easier maintenance, we suggest keeping your CSS customizations in a separate sass file so that your changes
             are not overriden with an update.</p>
 
-            <p>4.2.0 to 5.0.0</p>
+            <h4>5.0.0 to 5.2.0</h4>
+            <p>Adds support for PrimeNG 5.2.0 (e.g. TurboTable), replaces nanoscroller with PrimeNG ScrollPanel and reimplements ripple effect to run outside of NgZone for better performance.</p>
+            <ul>
+              <li>Remove nanoscroller as it is replaced by ScrollPanel component of PrimeNG.</li>
+              <li>Update app.component.ts.</li>
+              <li>Update app.sidebartabcontent.component.ts</li>
+              <li>Update layout css files.</li>
+              <li>Update theme css files.</li>
+            </ul>
+
+            <h4>4.2.0 to 5.0.0</h4>
             <ul>
                 <li>Update theme css files.</li>
             </ul>
 
-            <p>4.1.0 to 4.2.0</p>
+            <h4>4.1.0 to 4.2.0</h4>
             <ul>
                 <li>Update theme css files.</li>
             </ul>
 
-            <p>4.0.1 to 4.1.0</p>
+            <h4>4.0.1 to 4.1.0</h4>
             <ul>
                 <li>Update layout css files.</li>
                 <li>Update theme css files.</li>
                 <li>Update AppSubmenu component in app.menu.component.ts.</li>
             </ul>
 
-            <p>4.0 to 4.0.1</p>
+            <h4>4.0 to 4.0.1</h4>
             <ul>
                 <li>Update theme css files.</li>
             </ul>
 
-            <p>1.0.2 to 4.0</p>
+            <h4>1.0.2 to 4.0</h4>
             <ul>
                 <li>Includes version updates to PrimeNG 4 and Angular 4.</li>
                 <li>Update theme css files.</li>
             </ul>
 
-            <p>1.0.1 to 1.0.2</p>
+            <h4>1.0.1 to 1.0.2</h4>
             <ul>
                 <li>Update theme-*.css files.</li>
             </ul>
 
-            <p>1.0.0 to 1.0.1</p>
+            <h4>1.0.0 to 1.0.1</h4>
             <ul>
                 <li>Update layout-*.css files.</li>
                 <li>Update app.components.ts file.</li>
