--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -431,6 +431,11 @@ label: 'Components', icon: 'list', badge: '2', badgeStyleClass: 'red-badge'
             <p>For seamless updates and easier maintenance, we suggest keeping your CSS customizations in a separate sass file so that your changes
             are not overriden with an update.</p>
 
+            <h4>5.2.0 to 5.2.1</h4>
+            <ul>
+              <li>Update app.component.ts.</li>
+            </ul>
+
             <h4>5.0.0 to 5.2.0</h4>
             <p>Adds support for PrimeNG 5.2.0 (e.g. TurboTable), replaces nanoscroller with PrimeNG ScrollPanel and reimplements ripple effect to run outside of NgZone for better performance.</p>
             <ul>
