table scroll fix

--- a/src/assets/sass/theme/_data.scss
+++ b/src/assets/sass/theme/_data.scss
@@ -342,6 +342,11 @@ body {
             @include hover-element();
           }
         }
+
+        .ui-table-scrollable-header {
+            border: inherit;
+            color: $textColor;
+        }
     }
 
     .ui-datatable {
