--- a/src/assets/sass/layout/_media_queries.scss
+++ b/src/assets/sass/layout/_media_queries.scss
@@ -3,19 +3,19 @@
         &.layout-wrapper-menu-active {
             .layout-sidebar {
                 width: 310px;
-                
-                .layout-tabmenu {                                            
+
+                .layout-tabmenu {
                     .layout-tabmenu-contents {
                         display: block;
                     }
                 }
             }
-            
+
             .layout-main {
                 margin-left: 310px;
             }
-            
-            
+
+
             &.layout-rtl {
                 .layout-main {
                     margin-left: 0px;
@@ -23,13 +23,13 @@
                 }
             }
         }
-        
+
         &.layout-overlay-menu {
-            &.layout-wrapper-menu-active {                
+            &.layout-wrapper-menu-active {
                 .layout-main {
                     margin-left: 65px;
                 }
-                
+
                 &.layout-rtl {
                     .layout-main {
                         margin-left: 0px;
@@ -47,7 +47,7 @@
             #topbar-menu-button {
                 display: block;
             }
-            
+
             .topbar-menu {
                 position: absolute;
                 top: 60px;
@@ -62,13 +62,13 @@
                 margin: 0;
                 padding: 8px 0;
                 @include overlay-content-shadow();
-                
+
                 > li {
                     box-sizing: border-box;
                     width: 100%;
                     margin: 0;
                     float: none;
-                    
+
                     > a {
                         font-size: $fontSize;
                         width: 100%;
@@ -78,24 +78,24 @@
                         padding: $listItemPadding;
                         position: relative;
                         @include transition(background-color .3s);
-                        
+
                         .topbar-icon {
                             display: inline-block;
                             vertical-align: middle;
                             margin-right: 8px;
                             font-size: 20px;
                         }
-                        
+
                         &:hover {
                             background-color: $topbarSubmenuItemHoverBgColor;
                             color: $textColor;
                         }
-                        
+
                         .topbar-item-name {
                             display: inline-block;
                             vertical-align: middle;
                         }
-                                        
+
                         .topbar-badge {
                             position: absolute;
                             right: 10px;
@@ -106,7 +106,7 @@
                             line-height: 12px;
                         }
                     }
-                    
+
                     > ul {
                         display: none;
                         list-style-type: none;
@@ -118,39 +118,39 @@
                         box-sizing: border-box;
                         width: 100%;
                         @include no-shadow();
-                        
+
                         li {
                             a {
                                 padding: $listItemPadding;
                                 display: block;
                                 width: 100%;
                                 box-sizing: border-box;
-                                
+
                                 span, img, .fa {
                                     display: inline-block;
                                     vertical-align: middle;
                                 }
-                                
+
                                 img {
                                     width: 1.28571429em;
                                     margin-right: 8px;
                                 }
-                                
+
                                 .fa {
                                     margin-right: 8px;
                                 }
                             }
                         }
                     }
-                    
+
                     &.active-topmenuitem {
 
-                        
+
                         > ul {
                             display: block;
                         }
                     }
-                    
+
                     &.profile-item {
                         .profile-image {
                             img {
@@ -161,70 +161,74 @@
                                 margin-right: 8px;
                             }
                         }
-                        
+
                         .profile-info {
                             .topbar-item-name {
                                 &.profile-name {
                                     vertical-align: middle;
                                     font-size: $fontSize;
                                 }
-                                
+
                                 &.profile-role {
                                     display: none;
                                 }
                             }
                         }
                     }
-                    
+
+                    &.search-item {
+                        input {
+                            background-image: linear-gradient(to bottom, $primaryColor, $primaryColor), linear-gradient(to bottom, desaturate(lighten($primaryColor,25%), 25%), desaturate(lighten($primaryColor,25%), 25%));
+                        }
+                    }
+
                     &.search-item {
                         text-align: center;
-                        
+
                         .fa {
                             color: $textColor;
                             left: 14px;
                             width: 20px;
                         }
-                        
+
                         label {
-                            display: none;
+                            color: lighten($primaryColor,25%);
+                            padding-left: 10px;
                         }
-                        
+
                         input {
                             color: $textColor;
                             border: 0 none;
-                            border-bottom: 1px solid $inputBorderColor;
-                            background: transparent;
                             width: 90%;
                             box-sizing: border-box;
-                            padding-left: 30px;
+                            padding-left: 10px;
                             padding-right: 2px;
-                        
+
                             &.ui-state-hover {
                                 border-color: $inputBorderColor;
                             }
-                            
+
                             &:focus {
-                                border-color: $primaryColor;
-                                border-width: 0 0 2px 0;
+                                border-width: 0;
                             }
-                            
+
                             &:focus ~ .fa {
                                 color: $primaryColor;
                             }
                         }
                     }
                 }
-                
+
                 &.topbar-menu-visible {
                     display: block;
                 }
             }
         }
-        
+
         &.layout-wrapper-menu-active {
             .layout-sidebar {
                 width: 310px;
-                
+
                 .layout-tabmenu {
                     .layout-tabmenu-contents {
                         display: block;
@@ -232,50 +236,50 @@
                 }
             }
         }
-        
+
         &.layout-rtl {
             .topbar {
                 #topbar-menu-button {
                     float: left;
                     margin: 12px 0px 0px 20px;
                 }
-                
+
                 .topbar-menu {
                     right: auto;
                     left: 15px;
                     margin: 0px;
-                    
+
                     > li {
                         margin: 0px;
-                        
+
                         > a {
                             .topbar-icon {
                                 margin-right: 0px;
                                 margin-left: 8px;
                             }
-                            
+
                             .topbar-badge {
                                 left: 10px;
                             }
                         }
-                        
+
                         > ul {
                             padding: 0px 18px 0px 0px;
                         }
-                        
+
                         &.profile-item {
                             img {
                                 margin-right: 0;
                             }
                         }
                     }
-                    
+
                     > li.search-item {
                         input {
                             padding-left: 0px;
                             padding-right: 30px;
                         }
-                        
+
                         .fa {
                             left: auto;
                             right: 12px;
@@ -287,38 +291,38 @@
     }
 }
 
-@media (max-width: 640px) {    
+@media (max-width: 640px) {
     .layout-wrapper {
-        .topbar {    
+        .topbar {
             .logo {
                 width: 40px;
                 padding-top: 20px;
-                
+
                 img {
                     width: 30px;
                     margin-top: -5px;
                 }
             }
         }
-        
+
         .layout-sidebar {
             width: 40px;
-            
-            .layout-tabmenu {                
+
+            .layout-tabmenu {
                 .layout-tabmenu-nav {
                     width: 40px;
-                    
+
                     li {
                         a {
                             i {
                                 font-size: 20px;
                             }
                         }
-                        
+
                         .layout-tabmenu-tooltip {
                             left: 40px;
                         }
-                        
+
                         &.active-item {
                             .layout-tabmenu-tooltip {
                                 left: 36px;
@@ -326,23 +330,23 @@
                         }
                     }
                 }
-                
+
                 .layout-tabmenu-contents {
                     left: 40px;
                 }
             }
         }
-        
+
         &.layout-wrapper-menu-active {
             .layout-sidebar {
                 width: 290px;
             }
         }
-        
+
         .layout-main {
             margin-left:40px;
         }
-        
+
         &.layout-rtl {
             .layout-sidebar {
                 .layout-tabmenu {
@@ -359,7 +363,7 @@
                                     border-left-color: #424242;
                                 }
                             }
-                            
+
                             &.active-item {
                                 .layout-tabmenu-tooltip {
                                     right: 36px;
@@ -374,7 +378,7 @@
                     }
                 }
             }
-            
+
             .layout-main {
                 margin-left: 0px;
                 margin-right: 40px;
