--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -431,6 +431,13 @@ label: 'Components', icon: 'list', badge: '2', badgeStyleClass: 'red-badge'
             <p>For seamless updates and easier maintenance, we suggest keeping your CSS customizations in a separate sass file so that your changes
             are not overriden with an update.</p>
 
+            <h4>5.2.1 to 5.2.2</h4>
+            <p>Aligns input focus animation with the Material specs.</p>
+            <ul>
+                <li>Update layout css files.</li>
+                <li>Update theme css files.</li>
+            </ul>
+
             <h4>5.2.0 to 5.2.1</h4>
             <ul>
               <li>Update app.component.ts.</li>
