login input animation

--- a/src/assets/sass/theme/_forms.scss
+++ b/src/assets/sass/theme/_forms.scss
@@ -39,6 +39,16 @@ body {
         }
     }
 
+    .ui-inputtext:-webkit-autofill {
+        border-color: #bdbdbd;
+        border-style: solid;
+        border-width: 0px 0px 1px 0px;
+
+        &.ui-state-focus {
+            padding-bottom: 0px;
+        }
+    }
+    
     .md-inputfield {
         display: block;
         position:relative;
