--- a/src/assets/sass/theme/_forms.scss
+++ b/src/assets/sass/theme/_forms.scss
@@ -1262,6 +1262,7 @@ body {
 
             .ui-chips-input-token {
                 padding-bottom: 2px;
+                margin-bottom: 2px;
 
                 > input {
                     padding: 0;
@@ -1280,6 +1281,7 @@ body {
                 float: none;
                 vertical-align: middle;
                 font-size: 1em;
+                margin-bottom: 2px;
 
                 .ui-chips-token-label {
                     display: inline-block;
