--- a/src/assets/sass/theme/_icons.scss
+++ b/src/assets/sass/theme/_icons.scss
@@ -19,6 +19,7 @@
 .fa-minus {@include icon-override("remove");}
 .fa-plus {@include icon-override("add");}
 .fa-check {@include icon-override("check");}
+.fa-circle {@include icon-override("circle");}
 .fa-info-circle {@include icon-override("info");}
 .fa-upload  {@include icon-override("file_upload");}
 .fa-chevron-circle-left {@include icon-override("keyboard_arrow_left");}
