--- a/src/assets/sass/theme/_forms.scss
+++ b/src/assets/sass/theme/_forms.scss
@@ -53,7 +53,7 @@ body {
         display: block;
         position:relative;
 
-        label {
+        > label {
           color:#999;
           font-weight:normal;
           position:absolute;
