--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -431,6 +431,11 @@ label: 'Components', icon: 'list', badge: '2', badgeStyleClass: 'red-badge'
             <p>For seamless updates and easier maintenance, we suggest keeping your CSS customizations in a separate sass file so that your changes
             are not overriden with an update.</p>
 
+            <h4>5.2.4 to 5.2.5</h4>
+            <ul>
+                <li>Update theme css files.</li>
+            </ul>
+
             <h4>5.2.3 to 5.2.4</h4>
             <ul>
                 <li>Update layout css files.</li>
