--- a/src/app/demo/view/sampledemo.component.html
+++ b/src/app/demo/view/sampledemo.component.html
@@ -2,7 +2,7 @@
     <div class="ui-g">
         <div class="ui-g-12">
             <div class="ui-messages ui-widget ui-corner-all ui-messages-success" style="margin: 0 0 1em 0; display: block">
-                <span class="ui-messages-icon fa fa-fw fa-2x fa-check"></span>
+                <span class="ui-messages-icon pi pi-fw pi-check"></span>
                 <ul>
                     <li>
                         <span class="ui-messages-summary" style="font-size:16px">Barcelona provides a theme for all 70+ PrimeNG Components. This page contains samples of the commonly used components for demo purposes.</span>
