--- a/src/app/demo/view/panelsdemo.component.html
+++ b/src/app/demo/view/panelsdemo.component.html
@@ -15,19 +15,19 @@
             </p-accordion>
         </div>
     </div>
-    
+
     <div class="ui-g-12">
         <div class="card card-w-title">
             <h1>Panel</h1>
             <p-panel header="Godfather I" [toggleable]="true">
-                The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding. 
-                His beloved son Michael has just come home from the war, but does not intend to become part of his father's business. 
-                Through Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family, 
+                The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
+                His beloved son Michael has just come home from the war, but does not intend to become part of his father's business.
+                Through Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family,
                 kind and benevolent to those who give respect, but given to ruthless violence whenever anything stands against the good of the family.
             </p-panel>
         </div>
     </div>
-    
+
     <div class="ui-g-12">
         <div class="card card-w-title">
             <h1>TabView</h1>
@@ -44,15 +44,15 @@
             </p-tabView>
         </div>
     </div>
-    
+
     <div class="ui-g-12">
         <div class="card card-w-title">
             <h1>Fieldset</h1>
             <p-fieldset legend="Toggleable" toggleable="true">
-                The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding. 
-                His beloved son Michael has just come home from the war, but does not intend to become part of his father's business. 
-                Through Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family, 
-                kind and benevolent to those who give respect, 
+                The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
+                His beloved son Michael has just come home from the war, but does not intend to become part of his father's business.
+                Through Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family,
+                kind and benevolent to those who give respect,
                 but given to ruthless violence whenever anything stands against the good of the family.
             </p-fieldset>
         </div>
@@ -65,16 +65,16 @@
                 <div class="ui-toolbar-group-left">
                     <button pButton type="button" label="New" icon="ui-icon-add" class="green-btn"></button>
                     <button pButton type="button" label="Update" icon="ui-icon-update" class="orange-btn"></button>
-                        
+
                     <i class="material-icons" style="vertical-align:middle">dehaze</i>
-                    
+
                     <button pButton type="button" icon="ui-icon-save" class="green-btn"></button>
                     <button pButton type="button" icon="ui-icon-delete" class="orange-btn"></button>
                     <button pButton type="button" icon="ui-icon-print" class="pink-btn"></button>
                 </div>
-                
+
                 <div class="ui-toolbar-group-right">
-                    <p-splitButton label="Save" icon="fa-check" [model]="items"></p-splitButton>
+                    <p-splitButton label="Save" icon="pi pi-check" [model]="items"></p-splitButton>
                 </div>
            </p-toolbar>
         </div>
