--- a/src/assets/sass/theme/_forms.scss
+++ b/src/assets/sass/theme/_forms.scss
@@ -198,7 +198,7 @@ body {
                     padding-left: 1.5em;
                 }
 
-                .fa {
+                .pi {
                     top: 0;
                     left: 0;
                 }
@@ -233,7 +233,7 @@ body {
             line-height: 2.25em;
         }
 
-        .fa {
+        .pi {
             color: $primaryTextColor;
         }
 
@@ -242,7 +242,7 @@ body {
             width: 2.5em;
             height: 2.5em;
 
-            .fa {
+            .pi {
                 margin-left: -.5em;
             }
         }
@@ -511,7 +511,7 @@ body {
                 border-color: $primaryColor;
                 background-color: $primaryColor;
 
-                .fa {
+                .pi {
                     color: $primaryTextColor;
                 }
             }
@@ -559,10 +559,17 @@ body {
                 margin: 0
             }
 
-            .fa-circle {
+            .pi-circle-on {
+                &.pi:before {
+                    content: "circle";
+                }
                 background-color: $primaryColor;
                 -webkit-transform: scale(0.5);
                 transform: scale(0.5);
+                top: 50%;
+                left: 50%;
+                margin-top: -.5em;
+                margin-left: -.5em;
             }
         }
     }
@@ -616,7 +623,7 @@ body {
                     display: none;
                 }
 
-                .fa {
+                .pi {
                     color: $textSecondaryColor;
                 }
             }
@@ -695,10 +702,8 @@ body {
             top: 0;
             margin-right: 0;
 
-            .fa {
+            .pi {
                 color: $textSecondaryColor;
-                margin-top: 0;
-                margin-left: 0;
             }
         }
 
@@ -763,7 +768,7 @@ body {
                 }
             }
 
-            .fa {
+            .pi {
                 top: .325em;
                 right: .75em;
                 color: #ffffff;
@@ -793,10 +798,8 @@ body {
             bottom: 0;
             top: auto;
 
-            .fa {
+            .pi {
                 color: $textSecondaryColor;
-                margin-top: auto;
-                margin-left: auto;
             }
         }
 
@@ -848,7 +851,7 @@ body {
                 float: none;
                 margin-left: 0;
 
-                .fa {
+                .pi {
                     top: 0;
                     left: 0;
                     color: #ffffff;
@@ -913,15 +916,15 @@ body {
             z-index: auto;
             @include no-shadow();
 
-            .fa-triangle-1-n {
+            .pi-triangle-1-n {
                 color: $textColor;
             }
 
-            .fa-triangle-1-s {
+            .pi-triangle-1-s {
                 color: $textColor;
             }
 
-            .fa {
+            .pi {
                 top: 0px;
                 height: .5em;
                 color: $textSecondaryColor;
@@ -934,13 +937,13 @@ body {
         }
 
         .ui-spinner-up {
-            .fa {
+            .pi {
                 top: .25em;
             }
         }
 
         .ui-spinner-down {
-            .fa {
+            .pi {
                 top: .167em;
             }
         }
@@ -956,7 +959,7 @@ body {
                 width: 1em;
                 height: .75em;
 
-                .fa {
+                .pi {
                     left: auto;
                 }
             }
@@ -1068,7 +1071,8 @@ body {
             @include no-shadow();
             @include border-radius(0);
 
-            .fa {
+            .pi {
+                font-size: 1.5em;
                 color: $textSecondaryColor;
             }
 
@@ -1111,7 +1115,7 @@ body {
                 @include transition(background-color .3s);
                 color: #ffffff;
 
-                .fa {
+                .pi {
                     display: none;
                 }
 
@@ -1129,7 +1133,7 @@ body {
                 @include transition(background-color .3s);
                 color: #ffffff;
 
-                .fa {
+                .pi {
                     display: none;
                 }
 
@@ -1218,13 +1222,13 @@ body {
                         margin-bottom: .25em;
                     }
 
-                    .fa {
-                        &.fa-angle-up {
+                    .pi {
+                        &.pi-angle-up {
                             @include rotate(0);
                             @include material-icon("keyboard_arrow_up");
                         }
 
-                        &.fa-angle-down {
+                        &.pi-angle-down {
                             @include rotate(0);
                             @include material-icon("keyboard_arrow_down");
                         }
@@ -1239,19 +1243,20 @@ body {
     }
 
     .ui-rating {
+        font-size: inherit;
         min-height: 1.5em;
 
-        .fa-ban {
+        .pi-ban {
             @include material-icon("cancel");
             color: $textSecondaryColor;
         }
 
-        .fa-star {
+        .pi-star {
             @include material-icon("star");
             color: $textSecondaryColor;
         }
 
-        .fa-star-o {
+        .pi-star-o {
             @include material-icon("star_border");
             color: $textSecondaryColor;
         }
@@ -1355,7 +1360,7 @@ body {
         .ui-fileupload-buttonbar {
             padding: $headerPadding;
 
-            .fa-arrowreturnthick-1-n {
+            .pi-arrowreturnthick-1-n {
                 @include icon_override('file_upload');
             }
 
@@ -1370,7 +1375,7 @@ body {
 
         .ui-fileupload-content {
             .ui-messages-error {
-                .fa {
+                .pi {
                     color: #ffffff;
                 }
             }
